# social-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  error.rs  lib.rs
crates/libs/lib-core/src/acs/: mod.rs
crates/libs/lib-core/src/cache/: mod.rs  redis_fns.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/db/: crud_fns.rs  mod.rs  utils.rs
crates/libs/lib-core/src/model/: chat_role.rs  mod.rs  role.rs
crates/libs/lib-core/src/model/chat/: mod.rs
crates/libs/lib-core/src/model/chat_member/: mod.rs
crates/libs/lib-core/src/model/comment/: mod.rs
crates/libs/lib-core/src/model/community/: mod.rs
crates/libs/lib-core/src/model/follow/: mod.rs
crates/libs/lib-core/src/model/like/: mod.rs
crates/libs/lib-core/src/model/message/: mod.rs
crates/libs/lib-core/src/model/message_status/: mod.rs
crates/libs/lib-core/src/model/post/: mod.rs
crates/libs/lib-core/src/model/report/: mod.rs
crates/libs/lib-core/src/model/save/: mod.rs
crates/libs/lib-core/src/model/token/: mod.rs
crates/libs/lib-core/src/model/user/: mod.rs
crates/libs/lib-notification/: Cargo.toml
crates/libs/lib-notification/src/: config.rs  lib.rs
crates/libs/lib-notification/src/email/: mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: env.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/extractors/: ctx_ext.rs  mod.rs  validated_json.rs
crates/libs/lib-web/src/handlers/: handlers_auth.rs  handlers_chat.rs  handlers_comment.rs  handlers_community.rs  handlers_follow.rs  handlers_like.rs  handlers_messages.rs  handlers_notification.rs  handlers_post.rs  handlers_profile.rs  handlers_report.rs  handlers_report2.rs  handlers_search.rs  handlers_user.rs  mod.rs  ws_handlers_chat.rs
crates/libs/lib-web/src/middlewares/: mod.rs  mw_auth.rs
crates/libs/lib-web/src/services/: auth_service.rs  chat_service.rs  comment_service.rs  community_service.rs  follow_service.rs  like_service.rs  mod.rs  post_service.rs  profile_service.rs  report_service.rs  user_service.rs
crates/libs/lib-web/src/utils/: cookies.rs  mod.rs  response.rs  token.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/routes/: mod.rs  routes_auth.rs  routes_chat.rs  routes_comment.rs  routes_community.rs  routes_like.rs  routes_post.rs  routes_profile.rs  routes_report.rs  routes_search.rs  routes_user.rs  routes_ws.rs
migrations/: 20250207155940_create_updated_at_function.sql  20250207155959_create_users_table.sql  20250207160701_create_user_tokens_table.sql  20250207161000_create_communities_table.sql  20250207161535_create_posts_table.sql  20250303160039_create_comments_table.sql  20250303160040_create_likes_table.sql  20250425183217_create_follows_table.sql  20250501090324_create_user_saves_table.sql  20250503202319_create_chats_table.sql  20250526180011_create_reports_table.sql  20250527153409_insert_test_data.sql
