[workspace]
resolver = "2"
members = [
    "crates/libs/lib-auth", 
    "crates/libs/lib-core",
    "crates/libs/lib-utils",
    "crates/libs/lib-web",
    "crates/server",
]

[workspace.dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.43.0", features = ["full"] }

tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
validator = { version = "0.19.0", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

uuid = { version = "1.12.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0.95"
derive_more = {version = "1.0.0", features = ["full"]}
futures = "0.3.31"
time = "0.3.41"