[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
futures = { workspace = true }

lib-core = { path = "../libs/lib-core" }
lib-web = { path = "../libs/lib-web" }