[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = "9.3.0"
rust-argon2 = "2.1.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
lib-utils = { path = "../lib-utils"}
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
anyhow = { workspace = true }
